# XImage2

./: .gitignore  README.md
app/linux/cross_shader/: CMakeLists.txt  ContrastEnhance.cpp  ContrastEnhance.h  HSVDistance.cpp  HSVDistance.h  IAlgorithmStratety.cpp  IAlgorithmStratety.h  ImageDilated.cpp  ImageDilated.h  ImageErode.cpp  ImageErode.h  ImageProbe.cpp  ImageProbe.h  Makefile  MeanBlurX.cpp  MeanBlurX.h  ResampleDown.cpp  ResampleDown.h  ResampleUp.cpp  ResampleUp.h  Sharpen.cpp  Sharpen.h  WarmColor.cpp  WarmColor.h
app/linux/sample1/: Makefile  main.cpp
include/: opencv_all.h
